<resources>
    <string name="app_name">Cook HQ</string>
    <string name="home">Home</string>
    <string name="favorite">Saved</string>
    <string name="profile">About</string>
    <string name="search_recipe">Search recipe…</string>
    <string name="back">Back</string>
    <string name="error">Unexpected Error</string>
    <string name="desc">Description</string>
    <string name="ingre">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="error_home">There\'s no related recipe</string>
    <string name="error_saved">There\'s no saved recipe</string>
    <string name="saved_recipe">Saved Recipe</string>
    <string name="my_name">Muhammad Anugrah Hakiki</string>
    <string name="my_email">m.anugrahhakiki@gmail.com</string>
</resources>