...
    navigateToDetail: (Long) -> Unit,
    onSave: (id: Long) -> Unit,
) {
    LazyColumn(
        contentPadding = PaddingValues(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("RecipeList")
    ) {
        item {
            Spacer(modifier = modifier.padding(top = 65.dp))
        }
        items(recipes, key = { it.id }) { data ->
            RecipeItem(
...
