...

                    is ResultState.Success -> {
                        if (result.data.isEmpty()) {
                            Text(
                                modifier = modifier
                                    .align(Alignment.Center)
                                    .testTag("saved_error"),
                                text = stringResource(id = R.string.error_saved),
                                fontFamily = Urbanist,
                                color = selectedItem
                            )
                        } else {
                            SavedContent(
...
